--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 
-upload_port = tty.SLAB_USBtoUART
+upload_port = /dev/tty.SLAB_USBtoUART
+monitor_speed = 115200
+monitor_port = /dev/tty.SLAB_USBtoUART
